name: unix-mman
version: 0.0.0
synopsis: Comprehensive bindings to <sys/mman.h>
description: Comprehensive bindings to <sys/mman.h>
homepage: https://github.com/maoe/unix-mman
license: BSD3
license-file: LICENSE
author: Mitsutoshi Aoe
maintainer: Mitsutoshi Aoe <maoe@foldr.in>
copyright: Copyrignt (C) 2015 Mitsutoshi Aoe
category: System
build-type: Simple
cabal-version: >= 1.10

library
  exposed-modules:
    System.Posix.MMan
  build-depends:
      base >= 4.8 && < 4.9
    , unix
    , vector
  build-tools: c2hs
  ghc-options: -Wall
  hs-source-dirs: src
  default-language: Haskell2010

executable pagecache
  main-is: pagecache.hs
  build-depends:
      base
    , unix
    , unix-mman
    , vector
  ghc-options: -Wall
  hs-source-dirs: bin
  default-language: Haskell2010
